--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <meta property="og:image:type" content="image/jpeg">
     <meta property="og:image:width" content="300">
     <meta property="og:image:heigth" content="150">
-    <meta property="og:url" content="https://lifestyle.netlify.app/">
+    <meta property="og:url" content="https://lifestyle-max-developer.netlify.app/">
 </head>
 <body>
     
